tests/snapshots/python_parity_unit_snapshots__cache_drop_in_non_default_trust_zone.snap
---
source: tests/python_parity_unit_snapshots.rs
expression: body
---
[Unit]
X-Ghars-Spec-Hash=sha256:abcdefabcdefabcdefabcdefabcdefabcdefabcdefabcdefabcdefabcdef0123
X-Ghars-Pool-Name=build
X-Ghars-Pool-Kinds=sccache
X-Ghars-Sccache-Mode=pooled
X-Ghars-Config-Source=/etc/ghars/ghars.toml

[Service]
User=ghars-tz-buckos-prod
Environment=SCCACHE_DIR=%C/ghars/pools/build/sccache
Environment=SCCACHE_CACHE_SIZE=200G
Environment=SCCACHE_SERVER_UDS=%t/ghars/cache-build.sock
Environment=SCCACHE_NO_DAEMON=1
Environment=SCCACHE_IDLE_TIMEOUT=0
ExecStart=
ExecStart=/usr/bin/sccache --start-server
Type=forking
ReadWritePaths=%C/ghars/pools/build %t/ghars /var/lib/ghars/buckos-prod
