tests/snapshots/python_parity_unit_snapshots__dropin_00_identity_arch_aarch64.snap
---
source: tests/python_parity_unit_snapshots.rs
expression: "dropin(&r.drop_ins, \"00-ghars.conf\")"
---
[Unit]
X-Ghars-Spec-Hash=sha256:0000000000000000000000000000000000000000000000000000000000000000
X-Ghars-Runner-Name=buckos
X-Ghars-Runner-Url=https://github.com/example/buckos
X-Ghars-Auth-Name=pat
X-Ghars-Labels=linux,self-hosted
X-Ghars-Arch=aarch64
X-Ghars-Caches=
X-Ghars-Config-Source=/etc/ghars/ghars.toml
X-Ghars-Effective-Version=2.334.0
X-Ghars-Trust-Zone=default
X-Ghars-Network-Mode=open

[Service]
User=ghars-tz-default
BindPaths=/var/lib/ghars/default
WorkingDirectory=/var/lib/ghars/default/ghars-buckos/bin.2.334.0
ExecStart=
ExecStart=/bin/bash /var/lib/ghars/default/ghars-buckos/bin.2.334.0/bin/runsvc.sh
Environment=HOME=/var/lib/ghars/default/ghars-buckos
Environment=PATH=/usr/lib64/ccache:/usr/lib/ccache:/var/lib/ghars/default/ghars-buckos/.cargo/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
Environment=TMPDIR=/var/lib/ghars/default/ghars-buckos/tmp
Environment=KTSTR_LOCK_DIR=/var/lib/ghars/default/.ktstr
Environment=KTSTR_CACHE_DIR=/var/lib/ghars/default/.ktstr

[Unit]
ConditionPathExists=/var/lib/ghars/default/ghars-buckos/bin.2.334.0/bin/runsvc.sh
